# galaki-spot-winner

./: Anchor.toml  package-lock.json  readme.md
programs/galaki-winner-spot-sc/: Cargo.toml
programs/galaki-winner-spot-sc/src/: constants.rs  error.rs  events.rs  lib.rs  types.rs  utils.rs
programs/galaki-winner-spot-sc/src/actions/: add_init_client_instruction.rs  admin_action.rs  change_operator_wallet.rs  create_galaki_game.rs  create_game_project.rs  get_random_number.rs  get_winner_sport.rs  get_winner_spot.rs  initialize_galaki.rs  mod.rs  operator_get_winner_sport.rs  operator_withdraw.rs  set_auth_role.rs  set_up_reward.rs  user_claim_reward.rs  user_join_game.rs  user_participate_game.rs  withdraw.rs
programs/galaki-winner-spot-sc/src/instructions/: change_operator_wallet.rs  create_game_project.rs  initialize_galaki.rs  mod.rs  set_auth_role.rs  user_join_game.rs
programs/galaki-winner-spot-sc/src/state/: authority_role.rs  game_project.rs  ganaki.rs  ganaki_game.rs  mod.rs  user.rs
tests/: galaki-winner-spot-sc.ts  utils.ts
