[package]
name = "galaki-winner-spot-sc"
version = "0.1.0"
description = "Galaki Winner Spot Smart Contract"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "galaki_winner_spot_sc"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
rand= "0.8.4"
solana-safe-math="0.1.0"
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
solana-program = "=1.17.0"
ahash = "0.8.6"
anchor-spl = { version = "0.29.0", features = ["metadata"] }
